# qtshell

./: .travis.yml  CMakeLists.txt  QtShell  README.md  appveyor.yml  qpm.json  qtshell.cpp  qtshell.h  qtshell.pri  qtshell.pro
priv/: qtshellmv.cpp  qtshellpriv.cpp  qtshellpriv.h  qtshellrealpath.cpp
tests/qtshellunittests/: main.cpp  qpm.json  qtshelltests.cpp  qtshelltests.h  qtshellunittests.pro  resource.qrc
